log
do., 20 de mar. de 2022 20:51:11: 
 tests:  0|6
total_score: 0/70
a50b32e
do., 20 de mar. de 2022 20:56:20: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
c31e250
do., 20 de mar. de 2022 21:03:41: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
af38a05
do., 20 de mar. de 2022 21:08:40: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
54b81b0
do., 20 de mar. de 2022 21:16:31: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  0|0
4b2ca7d
do., 20 de mar. de 2022 21:17:56: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 10/70
d2a4596
do., 20 de mar. de 2022 21:19:13: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
f832aac
do., 20 de mar. de 2022 21:20:57: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
b7adee4
do., 20 de mar. de 2022 21:21:38: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f427f8f
do., 20 de mar. de 2022 21:22:17: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
229ca76
do., 20 de mar. de 2022 21:39:44: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:91:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
860de26
do., 20 de mar. de 2022 21:40:06: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
142d016
do., 20 de mar. de 2022 21:40:49: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
29a93b0
do., 20 de mar. de 2022 21:41:12: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
785a47d
do., 20 de mar. de 2022 21:43:55: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54ce187
do., 20 de mar. de 2022 21:56:52: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
209e90d
do., 20 de mar. de 2022 21:57:55: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
d0c014d
do., 20 de mar. de 2022 22:00:16: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|4
total_score: 25/70
5b77c07
do., 20 de mar. de 2022 22:00:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
91bdd67
do., 20 de mar. de 2022 22:01:48: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
b09e3db
do., 20 de mar. de 2022 22:02:05: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e9ba11a
do., 20 de mar. de 2022 22:06:13: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:91:26: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list -> head -> next = list;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
997b6eb
do., 20 de mar. de 2022 22:09:47: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:90:26: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list -> head -> next = list;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
a0814d9
do., 20 de mar. de 2022 22:17:07: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
89e4056
do., 20 de mar. de 2022 22:18:13: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:97:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
list.c:83:6: note: declared here
 void pushFront(List * list, void * data)
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4f1c5c4
do., 20 de mar. de 2022 22:18:43: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
9c2c4c6
